--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1335,7 +1335,7 @@ a {
 .cid-tJS6uM4N87 {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-color: #a0e1e1;
 }
 .cid-tJS6uM4N87 .mbr-fallback-image.disabled {
   display: none;
@@ -1707,6 +1707,65 @@ a {
 }
 .cid-tMlDYtQ5fF H4 {
   text-align: center;
+}
+.cid-uqv8gm1aI5 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #2b7a69;
+}
+.cid-uqv8gm1aI5 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uqv8gm1aI5 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uqv8gm1aI5 .mbr-description {
+  text-align: left;
+}
+.cid-uqv8gm1aI5 .item-wrapper {
+  background: #ffffff;
+  margin-bottom: 2rem;
+  padding: 2.25rem;
+}
+@media (max-width: 767px) {
+  .cid-uqv8gm1aI5 .item-wrapper {
+    padding: 2rem 1.5rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-uqv8gm1aI5 .item-wrapper {
+    padding: 2rem 1.5rem;
+    margin-bottom: 2rem;
+  }
+}
+.cid-uqv8gm1aI5 .card-title,
+.cid-uqv8gm1aI5 .iconfont-wrapper {
+  color: #000000;
+}
+.cid-uqv8gm1aI5 .card-text {
+  color: #000000;
+}
+.cid-uqv8gm1aI5 .mbr-section-title {
+  color: #000000;
+  text-align: center;
+}
+.cid-uqv8gm1aI5 .mbr-number {
+  color: #9fe870;
+}
+.cid-uqv8gm1aI5 .mbr-text,
+.cid-uqv8gm1aI5 .mbr-section-btn {
+  text-align: center;
+}
+.cid-uqv8gm1aI5 .card-text,
+.cid-uqv8gm1aI5 .item .mbr-section-btn {
+  text-align: left;
 }
 .cid-tJS9pBcTSa {
   padding-top: 6rem;
